# ultrashooter

./: .clangd  .gitignore  Actor.cpp  Actor.h  AlsoStartGameState.cpp  AlsoStartGameState.h  Bullet.cpp  Bullet.h  CMakeLists.txt  EndGameState.cpp  EndGameState.h  Enemy.cpp  Enemy.h  GameplayGameState.cpp  GameplayGameState.h  Logger.cpp  Logger.h  MainMenuGameState.cpp  MainMenuGameState.h  Makefile  Makefile.Android  Player.cpp  Player.h  README.md  StartGameState.cpp  StartGameState.h  globals.cpp  globals.h  main.cpp  minshell.html  ultrashooter.rc  ultrashooter.sln  ultrashooter.vcxproj  ultrashooter.vcxproj.filters  ultrashooter_log.txt  xmake.lua
Old_Buildsystem/: Makefile  ultrashooter.vcxproj  ultrashooter.vcxproj.filters
cmake/: RaylibBuild.cmake
data/fonts/: defaultfont.fnt  defaultfont_0.tga
src/: AlsoStartGameState.cpp  Bullet.cpp  EndGameState.cpp  EndGameState.h  Enemy.cpp  Enemy.h  GUI.cpp  GUI.h  GameState.cpp  GameState.h  GameplayGameState.cpp  GameplayGameState.h  HTTP.cpp  HTTP.h  Logger.cpp  MainMenuGameState.cpp  MainMenuGameState.h  Networking.cpp  Networking.h  Player.cpp  Player.h  RFont.cpp  RFont.h  RResource.cpp  RResource.h  RSound.cpp  RSound.h  RTexture.cpp  RTexture.h  ResourceSystem.cpp  ResourceSystem.h  StartGameState.cpp  StartGameState.h  UserData.h  fix_winapi_conflicts.h  globals.cpp  globals.h  main.cpp  resource.h
src/fs/: Filesystem.cpp  Filesystem.h
tools/: datapack.py
